Customize Amazon Cognito authentication behavior with Lambda functions workflow. This workflow contains three sub-workflows:
* Auto confirm known users
* Auto migrate known users
* Write custom activity logs

--- a/.doc_gen/metadata/cloudformation_metadata.yaml
+++ b/.doc_gen/metadata/cloudformation_metadata.yaml
@@ -14,3 +14,20 @@ cloudformation_Hello:
                 - CloudFormation.dotnetv3.CloudFormationActions.HelloCloudFormation
   services:
     cloudformation: {DescribeStackResources}
+cloudformation_DescribeStacks:
+  title: Get outputs from an &CFN; stack using an &AWS; SDK
+  title_abbrev: Get outputs from an stack
+  synopsis: get outputs from an &CFN; stack.
+  category:
+  languages:
+    Go:
+      versions:
+        - sdk_version: 2
+          github: gov2/workflows/user_pools_and_lambda_triggers
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - gov2.cloudformation.CloudFormationActions.complete
+  services:
+    cloudformation: {DescribeStacks}
