--- a/javascriptv3/example_code/bedrock-runtime/package.json
+++ b/javascriptv3/example_code/bedrock-runtime/package.json
@@ -8,7 +8,8 @@
     "integration-test": "vitest run **/*.integration.test.js"
   },
   "dependencies": {
-    "@aws-sdk/client-bedrock-runtime": "^3.515.0"
+    "@aws-sdk/client-bedrock-runtime": "^3.533.0",
+    "@aws-sdk/credential-provider-node": "^3.533.0"
   },
   "devDependencies": {
     "vitest": "^1.3.0",
