updated the SOS yaml file

--- a/.doc_gen/metadata/redshift_metadata.yaml
+++ b/.doc_gen/metadata/redshift_metadata.yaml
@@ -236,6 +236,23 @@ redshift_GetStatementResult:
                 - redshiftdata.java2.getresults.main
   services:
     redshift: {GetStatementResult}
+redshift_CreateTable:
+  title: Create an &RS; table using an &AWS; SDK
+  title_abbrev: Create a table. 
+  synopsis: create an &RS; table using an &AWS; SDK.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/redshift
+          sdkguide:
+          excerpts:
+            - description: 
+              snippet_tags:
+                - redshiftdata.java2.create_table.main
+  services:
+    redshift: {CreateTable}    
 redshift_Scenario:
   title: Get started with &RS; tables, items, and queries
   title_abbrev: Get started with &RS;
