Add .json extension to eslintrc

--- a/javascriptv3/.eslintrc.json
+++ b/javascriptv3/.eslintrc.json
@@ -11,6 +11,7 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
+    "extraFileExtensions": [".json"],
     "project": ["./tsconfig.json"]
   },
   "settings": {
