--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -239,7 +239,23 @@ bedrock-runtime_InvokeMixtral8x7B:
   services:
     bedrock-runtime: {InvokeModel}
 
-bedrock-runtime_InvokeClaude:
+bedrock-runtime_InvokeClaudeInstant:
+  title: Invoke the Anthropic Claude Instant model on &BR; for text generation
+  title_abbrev: Text generation with Anthropic Claude Instant
+  synopsis: invoke the Anthropic Claude Instant model on &BR; for text generation.
+  languages:
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Anthropic Claude Instant foundation model to generate text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/models/anthropic_claude/claude_instant_1.js
+  services:
+    bedrock-runtime: {InvokeModel}
+
+bedrock-runtime_InvokeClaude2x:
   title: Invoke the Anthropic Claude 2 model on &BR; for text generation
   title_abbrev: Text generation with Anthropic Claude 2
   synopsis: invoke the Anthropic Claude 2 model on &BR; for text generation.
