--- a/.github/workflows/issue-metrics.yml
+++ b/.github/workflows/issue-metrics.yml
@@ -36,8 +36,8 @@ jobs:
       uses: github/issue-metrics@v2
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SEARCH_QUERY: 'repo:brmur/aws-doc-sdk-examples is:pr created:${{ env.last_month }} -reason:"not planned"'
-
+        SEARCH_QUERY: 'repo:brmur/aws-doc-sdk-examples is:pr||is:issue created:${{ env.last_month }} -reason:"not planned"'
+        
     - name: Create issue
       uses: peter-evans/create-issue-from-file@v5
       env:
