--- a/.github/workflows/issue-metrics.yml
+++ b/.github/workflows/issue-metrics.yml
@@ -36,7 +36,7 @@ jobs:
       uses: github/issue-metrics@v2
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SEARCH_QUERY: 'repo:brmur/aws-doc-sdk-examples is:pr created:${{ env.last_month }} type:discussions -reason:"not planned"'
+        SEARCH_QUERY: 'repo:awsdocs/aws-doc-sdk-examples type:discussions is:pr created:${{ env.last_month }} -reason:"not planned"'
         
     - name: Create issue
       uses: peter-evans/create-issue-from-file@v5
