--- a/.github/workflows/issue-metrics.yml
+++ b/.github/workflows/issue-metrics.yml
@@ -36,9 +36,9 @@ jobs:
       uses: github/issue-metrics@v2
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SEARCH_QUERY: 'repo:awsdocs/aws-doc-sdk-examples type:discussions created:${{ env.last_month }}'
+        SEARCH_QUERY: 'repo:awsdocs/aws-doc-sdk-examples created:${{ env.last_month }} -reason:"not planned"'
         
-    - name: Create issue
+    - name: Create issue for opened issues and prs
       uses: peter-evans/create-issue-from-file@v5
       env:
         date_range: ${{steps.outputs.last_month}}
