--- a/.github/workflows/issue-metrics.yml
+++ b/.github/workflows/issue-metrics.yml
@@ -36,7 +36,7 @@ jobs:
       uses: github/issue-metrics@v2
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SEARCH_QUERY: 'repo:awsdocs/aws-doc-sdk-examples created:${{ env.last_month }} -reason:"not planned"'
+        SEARCH_QUERY: 'repo:awsdocs/aws-doc-sdk-examples is: issue created:${{ env.last_month }} -reason:"not planned"'
         
     - name: Create issue for opened issues and prs
       uses: peter-evans/create-issue-from-file@v5
