--- a/.github/workflows/javascript.yml
+++ b/.github/workflows/javascript.yml
@@ -17,7 +17,7 @@ jobs:
             .github
             javascriptv3
       - name: Get changed files
-        id: changed-jsv3-files
+        id: changed-files
         uses: tj-actions/changed-files@v41
         with:
           files: "javascriptv3/**/*.{js,ts,jsx,tsx,json}"
