--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -520,9 +520,9 @@ bedrock-runtime_InvokeLlama2:
     bedrock-runtime: {InvokeModel}
 
 bedrock-runtime_InvokeModelWithResponseStream:
-  title: Invoke the Anthropic Claude 2 model on &BR; for text generation with a response stream
-  title_abbrev: Text generation with Anthropic Claude 2 with a response stream
-  synopsis: invoke the Anthropic Claude 2 model on &BR; for text generation with a response stream.
+  title: Invoke Anthropic Claude on &BR; for text generation with a response stream
+  title_abbrev: Text generation with Anthropic Claude using a response stream
+  synopsis: invoke Anthropic Claude model on &BR; for text generation with a response stream.
   category:
   languages:
     Go:
@@ -530,7 +530,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: gov2/bedrock-runtime
           excerpts:
-            - description: Invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeModelWithResponseStream
     Java:
@@ -538,15 +538,23 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_model_with_response_stream.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude and process the response stream.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/models/anthropic_claude/claude_3.js
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
     .NET:
@@ -555,7 +563,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
           github: dotnetv3/Bedrock-runtime
           sdkguide:
           excerpts:
-            - description: Asynchronously invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Asynchronously invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.ClaudeWithResponseStream
   services:
