--- a/.doc_gen/metadata/redshift_metadata.yaml
+++ b/.doc_gen/metadata/redshift_metadata.yaml
@@ -93,9 +93,9 @@ redshift_DeleteCluster:
   services:
     redshift: {DeleteCluster}
 redshift_DescribeClusters:
-  title: Describe an &RS; cluster using an &AWS; SDK
-  title_abbrev: Describe your clusters
-  synopsis: describe an &RS; clusters.
+  title: Describe clusters using an &AWS; SDK
+  title_abbrev: Describe clusters
+  synopsis: describe &RS; clusters.
   category:
   languages:
     Kotlin:
@@ -222,7 +222,7 @@ redshift_DescribeStatement:
 redshift_GetStatementResult:
   title: Get the &RS; statement result using an &AWS; SDK
   title_abbrev: Get the statement result
-  synopsis: qet the statement result using the &RS; SDK.
+  synopsis: get the statement result.
   category:
   languages:
     Java:
@@ -238,8 +238,8 @@ redshift_GetStatementResult:
     redshift: {GetStatementResult}
 redshift_CreateTable:
   title: Create an &RS; table using an &AWS; SDK
-  title_abbrev: Create a table. 
-  synopsis: create an &RS; table using an &AWS; SDK.
+  title_abbrev: Create a table 
+  synopsis: create an &RS; table.
   category:
   languages:
     Java:
