--- a/kotlin/services/cognito/src/main/Cognito_Flutter_Mobile_App/macos/Podfile
+++ b/kotlin/services/cognito/src/main/Cognito_Flutter_Mobile_App/macos/Podfile
@@ -1,16 +1,16 @@
 platform :osx, '10.14'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
-ENV['COCOAPODS_DISABLE_STATS'] = 'true'
+ENV["COCOAPODS_DISABLE_STATS"] = "true"
 
-project 'Runner', {
-  'Debug' => :debug,
-  'Profile' => :release,
-  'Release' => :release,
+project "Runner", {
+  "Debug" => :debug,
+  "Profile" => :release,
+  "Release" => :release,
 }
 
 def flutter_root
-  generated_xcode_build_settings_path = File.expand_path(File.join('..', 'Flutter', 'ephemeral', 'Flutter-Generated.xcconfig'), __FILE__)
+  generated_xcode_build_settings_path = File.expand_path(File.join("..", "Flutter", "ephemeral", "Flutter-Generated.xcconfig"), __FILE__)
   unless File.exist?(generated_xcode_build_settings_path)
     raise "#{generated_xcode_build_settings_path} must exist. If you're running pod install manually, make sure \"flutter pub get\" is executed first"
   end
@@ -22,16 +22,16 @@ def flutter_root
   raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}. Try deleting Flutter-Generated.xcconfig, then run \"flutter pub get\""
 end
 
-require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
+require File.expand_path(File.join("packages", "flutter_tools", "bin", "podhelper"), flutter_root)
 
 flutter_macos_podfile_setup
 
-target 'Runner' do
+target "Runner" do
   use_frameworks!
   use_modular_headers!
 
   flutter_install_all_macos_pods File.dirname(File.realpath(__FILE__))
-  target 'RunnerTests' do
+  target "RunnerTests" do
     inherit! :search_paths
   end
 end
