--- a/kotlin/services/cognito/src/main/Cognito_Flutter_Mobile_App/android/app/src/main/AndroidManifest.xml
+++ b/kotlin/services/cognito/src/main/Cognito_Flutter_Mobile_App/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="android_app"
+        android:label="android-app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
