Ailly at 1.2.5-rc1 with windows working for 2 engineers

--- a/.tools/ailly/package.json
+++ b/.tools/ailly/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ailly-aws-doc-sdk-examples",
   "dependencies": {
-    "@ailly/cli": "^1.2.0",
-    "@ailly/core": "^1.2.1"
+    "@ailly/cli": "1.2.5-rc1",
+    "@ailly/core": "1.2.5-rc1"
   }
 }
