--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -462,6 +462,23 @@ bedrock-runtime_InvokeLlama2:
   services:
     bedrock-runtime: {InvokeModel}
 
+bedrock-runtime_InvokeClaude3WithResponseStream:
+  title: Invoke Anthropic Claude 3 model on &BR; and process the response stream
+  title_abbrev: "Anthropic Claude 3: Text generation with response stream"
+  synopsis: invoke Anthropic Claude 3 on &BR; and process the response stream.
+  category:
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude 3 with response stream.
+              snippet_tags:
+                - bedrock-runtime.java2.invoke_claude2_with_response_stream_messages_api.main
+  services:
+    bedrock-runtime: { InvokeModelWithResponseStream }
+
 bedrock-runtime_InvokeClaude2WithResponseStream:
   title: Invoke the Anthropic Claude 2 model on &BR; for text generation with a response stream
   title_abbrev: Text generation with Anthropic Claude 2 with a response stream
