--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -35,7 +35,7 @@ bedrock-runtime_Scenario_CliTextPlayground:
     - "Anthropic: Claude 2.0 and 2.1"
     - "Anthropic: Claude 3 Haiku and Sonnet"
     - "Meta: Llama2 Chat 13B and 70B"
-    - "Mistral AI: Mistral 7B and Mixtral 8c7B"
+    - "Mistral AI: Mistral 7B and Mixtral 8x7B"
   category: Scenarios
   languages:
     JavaScript:
