--- a/.doc_gen/metadata/bedrock-runtime_metadata.yaml
+++ b/.doc_gen/metadata/bedrock-runtime_metadata.yaml
@@ -13,6 +13,39 @@ bedrock-runtime_Hello:
             - description:
               snippet_tags:
                 - gov2.bedrock-runtime.Hello
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description:
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/hello.js
+  services:
+    bedrock-runtime: {InvokeModel}
+
+bedrock-runtime_Scenario_CliTextPlayground:
+  title: An interactive text generation playground for &BR;
+  title_abbrev: Interactive text playground
+  synopsis: "how to prepare and send a prompt to the following large-language models (LLMs) on &BR;:"
+  synopsis_list:
+    - "AI21 Labs: Jurassic2 Mid and Ultra"
+    - "Amazon: Titan Text G1 Lite and Express"
+    - "Anthropic: Claude Instant"
+    - "Anthropic: Claude 2.0 and 2.1"
+    - "Anthropic: Claude 3 Haiku and Sonnet"
+    - "Meta: Llama2 Chat 13B and 70B"
+    - "Mistral AI: Mistral 7B and Mixtral 8x7B"
+  category: Scenarios
+  languages:
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description:
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/scenarios/cli_text_playground.js
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -82,7 +115,7 @@ bedrock-runtime_InvokeAmazonTitanImageGeneratorForTextGeneration:
           excerpts:
             - description: Invoke the Amazon Titan Text G1 foundation model to generate text.
               snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/actions/invoke-titan-text-express-v1.js
+                - javascriptv3/example_code/bedrock-runtime/models/amazon_titan/titan_text.js
     .NET:
       versions:
         - sdk_version: 3
@@ -174,7 +207,7 @@ bedrock-runtime_InvokeMistral7B:
           excerpts:
             - description: Invoke the Mistral 7B foundation model to generate text.
               snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/actions/invoke-mistral7b.js
+                - javascriptv3/example_code/bedrock-runtime/models/mistral_ai/mistral_7b.js
     Python:
       versions:
         - sdk_version: 3
@@ -218,7 +251,7 @@ bedrock-runtime_InvokeMixtral8x7B:
           excerpts:
             - description: Invoke the Mixtral 8x7B foundation model to generate text.
               snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/actions/invoke-mixtral8x7b.js
+                - javascriptv3/example_code/bedrock-runtime/models/mistral_ai/mixtral_8x7b.js
     Python:
       versions:
         - sdk_version: 3
@@ -239,7 +272,23 @@ bedrock-runtime_InvokeMixtral8x7B:
   services:
     bedrock-runtime: {InvokeModel}
 
-bedrock-runtime_InvokeClaude:
+bedrock-runtime_InvokeClaudeInstant:
+  title: Invoke the Anthropic Claude Instant model on &BR; for text generation
+  title_abbrev: Text generation with Anthropic Claude Instant
+  synopsis: invoke the Anthropic Claude Instant model on &BR; for text generation.
+  languages:
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke the Anthropic Claude Instant foundation model to generate text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/models/anthropic_claude/claude_instant_1.js
+  services:
+    bedrock-runtime: {InvokeModel}
+
+bedrock-runtime_InvokeClaude2x:
   title: Invoke the Anthropic Claude 2 model on &BR; for text generation
   title_abbrev: Text generation with Anthropic Claude 2
   synopsis: invoke the Anthropic Claude 2 model on &BR; for text generation.
@@ -270,7 +319,7 @@ bedrock-runtime_InvokeClaude:
           excerpts:
             - description: Invoke the Anthropic Claude 2 foundation model to generate text.
               snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/actions/invoke-claude.js
+                - javascriptv3/example_code/bedrock-runtime/models/anthropic_claude/claude_2.js
     PHP:
       versions:
         - sdk_version: 3
@@ -323,6 +372,14 @@ bedrock-runtime_Claude3_Text:
             - description: Invoke Anthropic Claude 3 to generate text.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeAnthropicClaude3Text
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude 3 to generate text.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/models/ai21_labs_jurassic2/jurassic2.js
   services:
     bedrock-runtime: {InvokeModel}
 
@@ -374,7 +431,7 @@ bedrock-runtime_InvokeJurassic2:
           excerpts:
             - description: Invoke the AI21 Labs Jurassic-2 foundation model to generate text.
               snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/actions/invoke-jurassic2.js
+                - javascriptv3/example_code/bedrock-runtime/models/ai21_labs_jurassic2/jurassic2.js
     PHP:
       versions:
         - sdk_version: 3
@@ -434,7 +491,7 @@ bedrock-runtime_InvokeLlama2:
           excerpts:
             - description: Invoke the Meta Llama 2 Chat foundation model to generate text.
               snippet_files:
-                - javascriptv3/example_code/bedrock-runtime/actions/invoke-llama2.js
+                - javascriptv3/example_code/bedrock-runtime/models/meta_llama2/llama2_chat.js
     PHP:
       versions:
         - sdk_version: 3
@@ -463,9 +520,9 @@ bedrock-runtime_InvokeLlama2:
     bedrock-runtime: {InvokeModel}
 
 bedrock-runtime_InvokeModelWithResponseStream:
-  title: Invoke the Anthropic Claude 2 model on &BR; for text generation with a response stream
-  title_abbrev: Text generation with Anthropic Claude 2 with a response stream
-  synopsis: invoke the Anthropic Claude 2 model on &BR; for text generation with a response stream.
+  title: Invoke Anthropic Claude on &BR; for text generation with a response stream
+  title_abbrev: Text generation with Anthropic Claude using a response stream
+  synopsis: invoke Anthropic Claude model on &BR; for text generation with a response stream.
   category:
   languages:
     Go:
@@ -473,7 +530,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: gov2/bedrock-runtime
           excerpts:
-            - description: Invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - gov2.bedrock-runtime.InvokeModelWithResponseStream
     Java:
@@ -481,15 +538,23 @@ bedrock-runtime_InvokeModelWithResponseStream:
         - sdk_version: 2
           github: javav2/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - bedrock-runtime.java2.invoke_model_with_response_stream.main
+    JavaScript:
+      versions:
+        - sdk_version: 3
+          github: javascriptv3/example_code/bedrock-runtime
+          excerpts:
+            - description: Invoke Anthropic Claude and process the response stream.
+              snippet_files:
+                - javascriptv3/example_code/bedrock-runtime/models/anthropic_claude/claude_3.js
     Python:
       versions:
         - sdk_version: 3
           github: python/example_code/bedrock-runtime
           excerpts:
-            - description: Invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - python.example_code.bedrock-runtime.InvokeModelWithResponseStream
     .NET:
@@ -498,7 +563,7 @@ bedrock-runtime_InvokeModelWithResponseStream:
           github: dotnetv3/Bedrock-runtime
           sdkguide:
           excerpts:
-            - description: Asynchronously invoke the Anthropic Claude 2 model and process the response stream.
+            - description: Asynchronously invoke Anthropic Claude and process the response stream.
               snippet_tags:
                 - BedrockRuntime.dotnetv3.BedrockRuntimeActions.InvokeModelAsync.ClaudeWithResponseStream
   services:
